--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- heading -->
             <h1 style="text-align: center;margin-top: 20px;font-weight: 800;color: rgb(80, 3, 29);">BMI Calculator</h1>
             <!-- age -->
-             <div class="age">
+             <div class="age ">
                 <h2 style="font-size: large;font-weight: 700;text-align: center;"><label for="tx">Age</label></h2>
                 <input id="tx" type="number"min="0"step="1"placeholder="Enter your age"style="margin-left:120px;">
             
@@ -63,7 +63,7 @@
              <br>
 
              <!-- result and  health status -->
-             <h3 style="font-size: x-large;font-weight: 700;text-align: center;">Your BMI is</h3>
+             <h3 id="bmi" style="font-size: x-large;font-weight: 700;text-align: center;">Your BMI is</h3>
               <div class="para">
                 
                 <p id="result"style="font-size:40px;font-weight: 700;text-align: center;display:block;">00.00</p>
