--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
              <h3 id="bmi" style="font-size: x-large;font-weight: 700;text-align: center;">Your BMI is</h3>
               <div class="para">
                 
-                <p id="result"style="font-size:40px;font-weight: 700;text-align: center;display:block;">00.00</p>
+                <p id="result"style="font-size:40px;font-weight: 700;text-align: center;">00.00</p>
 
               </div><br>
               <p id="comment"></p>
          <!-- scale -->
           <div class="scale">
-            <div class="number"style="border-top:5px solid lightgreen;">
+            <div class="number"style="border-top:5px solid rgb(14, 163, 232);">
                 <h6>Underweight</h6>
                 <p>&lt;18.5</p>
             </div>
             <div class="number"style="border-top:5px solid darkgreen;">
-                <h6>Normal</h6>
+                <h6>Healthy</h6>
                 <p>18.5 - 25</p>
 
             </div>
